Replace calls to deprecated URL constructors