@@ -1,6 +1,6 @@
 /* $Id$ */
 /***************************************************************************
- *                   (C) Copyright 2003-2011 - Stendhal                    *
+ *                   (C) Copyright 2003-2025 - Stendhal                    *
  ***************************************************************************
  ***************************************************************************
  *                                                                         *
@@ -18,7 +18,8 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.PrintStream;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.List;
@@ -80,13 +81,14 @@ public class UpdatePropUpdater {
 	 * loads the current version of the update.properties
 	 *
 	 * @throws IOException in case of an input/output error
+	 * @throws URISyntaxException
 	 */
-	private void loadOldUpdateProperties() throws IOException {
+	private void loadOldUpdateProperties() throws IOException, URISyntaxException {
 		prop = new Properties();
 		InputStream is;
 		if (oldFile.indexOf(":") > 2) {
-			URL url = new URL(oldFile);
-			is = url.openStream();
+			URI uri = new URI(oldFile);
+			is = uri.toURL().openStream();
 		} else {
 			is = new FileInputStream(oldFile);
 		}
